[gd_scene load_steps=5 format=3 uid="uid://crf7ikdowkr3q"]

[ext_resource type="Script" uid="uid://xu8gste36sv" path="res://game_over.gd" id="1_yxx3c"]
[ext_resource type="Texture2D" uid="uid://dltfrr1lkprdq" path="res://Assets/TitleScreen/GameOver.png" id="2_ccer4"]
[ext_resource type="AudioStream" uid="uid://c6r3f1ssbmie8" path="res://Audio/SFX/coin-collect-retro-8-bit-sound-effect-145251.mp3" id="3_ccer4"]
[ext_resource type="AudioStream" uid="uid://b2hdxq2kyjhmo" path="res://Audio/BGM/Night1.mp3" id="4_8u835"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yxx3c")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(6, 6)
texture = ExtResource("2_ccer4")

[node name="boxBG" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 313.0
offset_top = 140.0
offset_right = 1031.0
offset_bottom = 717.0
mouse_filter = 2
color = Color(0, 0, 0, 0.458824)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -314.0
offset_top = 180.0
offset_right = 314.0
offset_bottom = 634.0
grow_horizontal = 2
theme_override_constants/separation = 34

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 35
theme_override_font_sizes/normal_font_size = 100
text = "Game Over"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
justification_flags = 162

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 35
theme_override_font_sizes/normal_font_size = 50
text = "You got to wave: "
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
justification_flags = 162

[node name="RichTextLabel3" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 35
theme_override_font_sizes/normal_font_size = 50
text = "Thanks for playing!"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
justification_flags = 162

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Back to Main Menu"

[node name="BlackFade" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -32.0
offset_top = -26.0
offset_right = 1376.0
offset_bottom = 844.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="SelectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ccer4")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8u835")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
